payment integrated, race condition solved, user history completed...